# home-ops

./: .gitignore  .justfile  .mise.toml  .sops.yaml  README.md  Taskfile.yaml  ansible.cfg  makejinja.toml
ansible/: mod.just  (+3 more)
ansible/collections/ansible_collections/artis3n/tailscale/: .envrc.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  FILES.json  MANIFEST.json  Makefile  ansible.cfg  pyproject.toml  requirements.yml
ansible/collections/ansible_collections/artis3n/tailscale/.config/molecule/: config.yml
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/: DEVELOPMENT.md
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/role-machine-args/: molecule.yml
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/role-machine-default/: molecule.yml  prepare.yml
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/role-machine-idempotent-up/: converge.yml  molecule.yml
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/role-machine-oauth/: molecule.yml
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/role-machine-reinstall/: molecule.yml
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/role-machine-skip-authentication/: molecule.yml
ansible/collections/ansible_collections/artis3n/tailscale/extensions/molecule/role-machine-state-absent/: converge.yml  molecule.yml  verify.yml
ansible/collections/ansible_collections/artis3n/tailscale/roles/machine/: README.md
(+105 files in other folders)
