[project]
name = "artis3n.tailscale"
description = "Ansible collection to manage your Tailscale devices and tailnet."
version = "1.2.0"
authors = [
    { name = "Ari Kalfus (artis3n)", email = "dev@artis3nal.com" },
]
license = "MIT"
readme = "README.md"
keywords = [
    "ansible",
    "networking",
    "tailscale",
    "vpn",
]
classifiers = [
    "Framework :: Ansible",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System",
    "Topic :: System :: Networking",
]
requires-python = "~=3.14.2"
dependencies = [
    "ansible~=13.2.0",
]

[dependency-groups]
dev = [
    "ansible-creator>=25.12.0",
    "ansible-lint~=25.11.0",
    "molecule~=25.11.0",
    "molecule-plugins[docker]~=25.8.12",
    "pre-commit>=4.3.0",
]

[project.urls]
homepage = "https://github.com/artis3n/ansible-collection-tailscale"
repository = "https://github.com/artis3n/ansible-collection-tailscale"
documentation = "https://github.com/artis3n/ansible-collection-tailscale"
"Bug Tracker" = "https://github.com/artis3n/ansible-collection-tailscale/issues"
